# prtg-admin

./: README.md  mkdocs.yml
prtg/: Decommisioned_servers.py  channel.py  config.py  device.py  sensor.py  terminal_outputs.py
prtg/tests/: test_device.py
tests/: README.md  pyproject.toml
tests/prtg/: config.py  cores.py  device.py  local_base.py  sensor.py  sensors.csv
