[tool.poetry]
name = "prtg"
version = "0.1.0"
description = ""
authors = ["alsidneio <alsidneio.bell@omes.ok.gov>"]
readme = "README.md"
packages = [
    { include = "*.py", from = "prtg" },
]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}
platformdirs = "^4.2.2"
build = "^1.2.1"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
idna = "^3.7"
markdown-it-py = "^3.0.0"
mdurl = "^0.1.2"
packaging = "^24.1"
pygments = "^2.18.0"
requests = "^2.32.3"
rich = "^13.7.1"
tomli = "^2.0.1"
typing-extensions = "^4.12.2"
urllib3 = "^2.2.2"
xmltodict = "^0.13.0"
pytest = "^8.2.2"
pip-system-certs = "^4.0"

[tool.poetry.scripts]
prtg = "local_base:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

